--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>mysubs</title>
+  <title>S1-E1-scandalinbohemia</title>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
@@ -10,7 +10,7 @@
   <script>
     var video = document.getElementById('video');
     var hls = new Hls();
-    hls.loadSource('https://github.com/exelal-44/subs');
+    hls.loadSource('https://github.com/exelal-44/myfavseries/blob/main/S1-E1-scandalinbohemia.m3u8');
     hls.attachMedia(video);
   </script>
 </body>
