--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script>
     var video = document.getElementById('video');
     var hls = new Hls();
-    hls.loadSource('https://github.com/exelal-44/myfavseries/blob/main/S1-E1-scandalinbohemia.m3u8');
+    hls.loadSource('https://exelal-44.github.io/subs/');
     hls.attachMedia(video);
   </script>
 </body>
